--- a/express/backend/package.json
+++ b/express/backend/package.json
@@ -2,9 +2,8 @@
   "name": "try-project",
   "version": "1.0.0",
   "description": "try-project",
-  "main": "index.js",
-  "type": "module" ,
-  
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Juju1OO1/try-project/issues"
   },
-  "homepage": "https://github.com/Juju1OO1/try-project#readme"
+  "homepage": "https://github.com/Juju1OO1/try-project#readme",
+  "dependencies": {
+    "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
+  }
 }
