--- a/express/package.json
+++ b/express/package.json
@@ -18,8 +18,14 @@
   },
   "homepage": "https://github.com/Juju1OO1/try-project#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   }
